feat(packages): styled component package addedd

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "styled-components": "^5.3.5"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
