--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "commitizen": "^4.2.5",
-    "cz-conventional-changelog": "^3.3.0"
+    "cz-conventional-changelog": "^3.3.0",
+    "styled-components": "^5.3.5"
   },
   "config": {
     "commitizen": {
