--- a/packages/slider-swipe/package.json
+++ b/packages/slider-swipe/package.json
@@ -12,7 +12,8 @@
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@webinteractions/common": "1.0.0"
+    "@webinteractions/common": "1.0.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.20.0",
