--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@webinteractions/common",
+  "name": "@webinteractions/components",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
