--- a/packages/project/package.json
+++ b/packages/project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slider-swipe",
+  "name": "project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,7 @@
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@webinteractions/common": "1.0.0",
+    "@webinteractions/components": "1.0.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
