fix(build script): build script added in package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "packages/*"
   ],
   "scripts": {
+    "build": "yarn workspace project build",
     "dev": "yarn workspace project dev",
     "commit": "git-cz",
     "storybook": "yarn workspace @webinteractions/components storybook",
