--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "yarn workspace project dev",
     "commit": "git-cz",
     "storybook": "yarn workspace @webinteractions/components storybook",
+    "build-storybook": "yarn workspace @webinteractions/components build-storybook",
     "build-components-lib": "yarn workspace @webinteractions/components build-lib"
   },
   "dependencies": {
