--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -11,6 +11,7 @@
     "build-lib": "rollup -c"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
