--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
+    "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
@@ -33,7 +34,8 @@
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-posthtml-multi": "^0.1.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-filesize": "^9.1.2"
   },
   "peerDependencies": {
     "react": "18.2.0",
