--- a/packages/project/package.json
+++ b/packages/project/package.json
@@ -13,6 +13,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "@webinteractions/components": "1.0.0",
+    "@webinteractions/icons": "1.0.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
