feat(docz): docz documentation

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -11,8 +11,11 @@
     "build-lib": "rollup -c"
   },
   "dependencies": {
+    "@emotion/core": "^10.1.0",
+    "docz": "^2.4.0",
     "prop-types": "^15.8.1",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "theme-ui": "^0.14.7"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
@@ -32,10 +35,10 @@
     "react-dom": "18.2.0",
     "rollup": "^2.78.1",
     "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-filesize": "^9.1.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-posthtml-multi": "^0.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-filesize": "^9.1.2"
+    "rollup-plugin-terser": "^7.0.2"
   },
   "peerDependencies": {
     "react": "18.2.0",
